# nanochat-aprender

./: .clippy.toml  .gitignore  APRENDER_REUSE_ANALYSIS.md  Cargo.toml  README.md  REMEDIATION_PLAN.md  REMEDIATION_PLAN_PLACEHOLDERS.md  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: benchmarks.yml  ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  task-completion-checklist.md  tasks-template.md
crates/nanochat-cli/: Cargo.toml
crates/nanochat-cli/src/: main.rs
crates/nanochat-eval/: Cargo.toml
crates/nanochat-eval/src/: arc.rs  chatcore.rs  core.rs  generate.rs  gsm8k.rs  humaneval.rs  lib.rs  main.rs  mmlu.rs  report.rs
crates/nanochat-eval/tests/: test_arc.rs  test_core.rs  test_gsm8k.rs  test_report.rs
crates/nanochat-inference/: Cargo.toml
crates/nanochat-inference/src/: main.rs
crates/nanochat-midtrain/: Cargo.toml
crates/nanochat-midtrain/src/: dataloader.rs  lib.rs  main.rs  train.rs
crates/nanochat-midtrain/tests/: test_dataloader.rs  test_train.rs
crates/nanochat-model/: Cargo.toml
crates/nanochat-model/benches/: forward.rs
crates/nanochat-model/src/: attention.rs  checkpoint.rs  config.rs  gpt.rs  init.rs  lib.rs  mlp.rs  norm.rs  rope.rs  stability.rs
crates/nanochat-model/tests/: test_attention.rs  test_checkpoint.rs  test_config.rs  test_forward.rs  test_mlp.rs  test_norm.rs  test_numerical_parity.rs  test_rope.rs  test_tokenizer_model.rs
crates/nanochat-model/tests/unit/: test_config.rs
crates/nanochat-pretrain/: Cargo.toml  config.example.json
crates/nanochat-pretrain/src/: config.rs  dataloader.rs  lib.rs  main.rs  metrics.rs  optimizer.rs  train.rs
crates/nanochat-pretrain/tests/: test_dataloader.rs  test_optimizer.rs  test_train.rs
crates/nanochat-sft/: Cargo.toml
crates/nanochat-sft/src/: config.rs  dataloader.rs  lib.rs  main.rs  metrics.rs  optimizer.rs  train.rs
crates/nanochat-sft/tests/: test_dataloader.rs  test_train.rs
crates/nanochat-tokenizer/: Cargo.toml
crates/nanochat-tokenizer/src/: bpe.rs  lib.rs  special_tokens.rs  vocab.rs
crates/nanochat-tokenizer/tests/: test_bpe.rs  test_encode_decode.rs  test_roundtrip.proptest-regressions  test_roundtrip.rs  test_serialization.rs  test_special_tokens.rs
specs/001-rust-nanochat-port/: APRENDER_API_ANALYSIS_REPORT.md  APRENDER_API_SOLUTIONS.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_REMEDIATION_PLAN.md  REMEDIATION_SUMMARY.md  TASK_COMPLETION_CHECKLIST_PROPOSAL.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-nanochat-port/checklists/: requirements.md
specs/001-rust-nanochat-port/contracts/: inference-api.yaml  training-api.md  training-api.yaml
