[workspace]
members = [
    "crates/nanochat-model",
    "crates/nanochat-tokenizer",
    "crates/nanochat-pretrain",
    "crates/nanochat-midtrain",
    "crates/nanochat-sft",
    "crates/nanochat-eval",
    "crates/nanochat-inference",
    "crates/nanochat-cli",
]
exclude = [".idea"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
license = "MIT"
authors = ["Nanochat Rust Port Contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# Allow single-character variables for mathematical notation
many_single_char_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"

[workspace.dependencies]
# Machine Learning - use local forks
aprender = { path = ".idea/aprender", default-features = false, features = ["parallel"] }
trueno = { path = ".idea/trueno", default-features = false }
nalgebra = { path = ".idea/nalgebra", default-features = false, features = ["std"] }

# Web framework
actix-web = "4.8"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Testing
criterion = "0.5"
proptest = "1.6"
pretty_assertions = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling

[profile.dev]
opt-level = 1  # Faster dev builds

