[package]
name = "nanochat-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Evaluation and benchmarking for nanochat models"
repository = "https://github.com/karpathy/nanochat"

[lib]
name = "nanochat_eval"
path = "src/lib.rs"

[[bin]]
name = "nanochat-eval"
path = "src/main.rs"

[dependencies]
nanochat-model = { path = "../nanochat-model" }
nanochat-tokenizer = { path = "../nanochat-tokenizer" }
aprender = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["cpu-only"]
cpu-only = []

