[package]
name = "nanochat-midtrain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Mid-training stage for nanochat conversational fine-tuning"
repository = "https://github.com/karpathy/nanochat"

[[bin]]
name = "nanochat-midtrain"
path = "src/main.rs"

[dependencies]
nanochat-model = { path = "../nanochat-model" }
nanochat-tokenizer = { path = "../nanochat-tokenizer" }
nanochat-pretrain = { path = "../nanochat-pretrain" }
aprender = { workspace = true, features = ["gpu"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rand = "0.8"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"

[features]
default = ["cpu-only"]
gpu = ["aprender/gpu"]
cpu-only = []

