[package]
name = "nanochat-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core GPT model implementation for nanochat"
repository = "https://github.com/karpathy/nanochat"

[dependencies]
aprender = { workspace = true, features = ["gpu"] }
trueno = { workspace = true, features = ["gpu"] }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["gpu"]
gpu = ["aprender/gpu", "trueno/gpu"]
cpu-only = []

