[package]
name = "nanochat-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core GPT model implementation for nanochat"
repository = "https://github.com/karpathy/nanochat"

[dependencies]
aprender = { workspace = true, features = ["gpu"] }
trueno = { workspace = true, features = ["gpu"] }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = "3.8"
nanochat-tokenizer = { path = "../nanochat-tokenizer" }

[features]
default = ["cpu-only"]
gpu = ["aprender/gpu", "trueno/gpu"]
cpu-only = []

[[bench]]
name = "forward"
path = "benches/forward.rs"
harness = false
