[package]
name = "nanochat-sft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Supervised fine-tuning stage for nanochat instruction following"
repository = "https://github.com/karpathy/nanochat"

[[bin]]
name = "nanochat-sft"
path = "src/main.rs"

[dependencies]
nanochat-model = { path = "../nanochat-model" }
nanochat-tokenizer = { path = "../nanochat-tokenizer" }
aprender = { workspace = true, features = ["gpu"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["cpu-only"]
gpu = ["aprender/gpu"]
cpu-only = []

