[package]
name = "nanochat-tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BPE tokenizer implementation for nanochat"
repository = "https://github.com/karpathy/nanochat"

[dependencies]
aprender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.10"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = "3.8"

